--- a/backend/angular.json
+++ b/backend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "expat-manual": {
+    "alfred-at-work": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/expat-manual",
+            "outputPath": "dist/alfred-at-work",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "expat-manual:build"
+            "browserTarget": "alfred-at-work:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "expat-manual:build:production"
+              "browserTarget": "alfred-at-work:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "expat-manual:build"
+            "browserTarget": "alfred-at-work:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "expat-manual-e2e": {
+    "alfred-at-work-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "expat-manual:serve"
+            "devServerTarget": "alfred-at-work:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "expat-manual:serve:production"
+              "devServerTarget": "alfred-at-work:serve:production"
             }
           }
         },
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "expat-manual"
+  "defaultProject": "alfred-at-work"
 }
