--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "ngx-showdown": "^4.0.2",
     "rxjs": "^6.0.0",
+    "save": "^2.3.2",
+    "showdown": "^1.8.6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
