--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.22.1",
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "uuid": "^3.2.1"
   }
 }
