--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "nodemailer": "^4.6.7",
     "uuid": "^3.2.1"
   }
 }
