--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Alexandre Nicol",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.266.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -18,6 +19,7 @@
     "mongoose": "^5.0.14",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "nodemailer": "^4.6.7",
     "uuid": "^3.2.1"
   }
